force-app/main/default/objects/ssot__TeamMember__dlm/fields/ssot__MemberObjectName__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberObjectName__c</fullName>
    <label>Member Object Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberObjectName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>