force-app/main/default/objects/ssot__TeamMember__dlm/fields/ssot__TeamId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TeamId__c</fullName>
    <label>Team</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TeamId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>