force-app/main/default/objects/ssot__TeamMember__dlm/fields/ssot__TeamMember_MemberId_map_User_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__TeamMember_MemberId_map_User_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamMember_MemberId_map_User_Id_N_1</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>TeamMember_MemberId_map_User_Id_N_1</relationshipLabel>
    <relationshipName>TeamMember_MemberId_map_User_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>