force-app/main/default/objects/ssot__TeamMember__dlm/fields/ssot__TeamMember_TeamId_map_Team_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__TeamMember_TeamId_map_Team_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamMember_TeamId_map_Team_Id_N_1</label>
    <referenceTo>ssot__Team__dlm</referenceTo>
    <relationshipLabel>TeamMember_TeamId_map_Team_Id_N_1</relationshipLabel>
    <relationshipName>TeamMember_TeamId_map_Team_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>